# SM-Ext-Audio

./: Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
sm/: smsdk_config.h
src/: lib.rs  player.rs
