[package]
name = "audio_ext"
version = "0.1.1"
authors = ["PerfectLaugh <denniswu81229@gmail.com>"]
edition = "2018"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[features]
default = ["metamod", "csgo", "protobuf"]
metamod = []
csgo = []
protobuf = []

[dependencies]
async-std = { version = "1.7" }
byteorder = "1.3"
cpp = "0.5"
futures = "0.3"
libloading = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
cc = "1.0"
cpp_build = "0.5"
lazy_static = "1.4"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
